# libuipc

./: .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  CMakePresets.json  README.md  build.md  doxide.yaml  imgui.ini  mkdocs-with-api.yaml  mkdocs.yaml  vcpkg.json  xmake.lua
apps/app/: CMakeLists.txt  asset_dir.cpp  asset_dir.h  require_log.cpp  require_log.h  test_common.h  test_utils.cpp  test_utils.h
apps/app/details/: require_log.inl
apps/benchmarks/: CMakeLists.txt  main.cpp
apps/benchmarks/basic/: CMakeLists.txt  basic.cpp
apps/examples/hello_affine_body/: CMakeLists.txt  main.cpp
apps/tests/: CMakeLists.txt  main.cpp
apps/tests/backend/: CMakeLists.txt  none.cpp
apps/tests/backends/: CMakeLists.txt
apps/tests/common/: CMakeLists.txt  range.cpp  run_length_encode.cpp
apps/tests/core/: CMakeLists.txt  attribute_collection.cpp  constitution.cpp  contact_model.cpp  dump_recover.cpp  engine.cpp  geometry_atlas.cpp  gltf_io.cpp  object.cpp  scene.cpp  scene_factory.cpp  scene_io.cpp  serializer.cpp  simplicial_complex.cpp  stack_trace.cpp
apps/tests/geometry/: affine_body_quantity.cpp  apply_region.cpp  closure.cpp  compute_instance_volume.cpp  extract_surface.cpp  factory.cpp  flip_inward_triangles.cpp  geometry_atlas.cpp  instancing.cpp  label_connected_vertices.cpp  label_surface.cpp  mesh_io.cpp  optimal_transform.cpp  read_mesh.cpp  readmsh.cpp  simplicial_complex.cpp  spreadsheet.cpp  tetrahedralize.cpp  urdf_io.cpp  write_mesh.cpp
apps/tests/gui/: CMakeLists.txt  hello_bgfx.cpp
apps/tests/sanity_check/: CMakeLists.txt  half_plane_vertex_distance_check.cpp  init_surface_sanity_check.cpp  simplicial_surface_distance_check.cpp  simplicial_surface_intersection_check.cpp
apps/tests/sim_case/: 0_abd_gravity.cpp  10_abd_ground_contact.cpp  11_abd_ramp_sliding.cpp  12_abd_self_ground_contact.cpp  13_fem_3d_gravity.cpp  14_fem_3d_ground_contact.cpp  15_fem_3d_fixed_point.cpp  16_fem_3d_scaling.cpp  17_fem_multi_constituion.cpp  18_abd_fem_contact.cpp  19_fem_contact_pt.cpp  19_shell_fixed_point.cpp  1_abd_contact_pt.cpp  20_spring_fixed_point.cpp  21_particle_ground.cpp  22_fem_animated_vertices.cpp  23_kirchhoff_rod_bending.cpp  24_abd_animated_translation.cpp  25_abd_animated_rotation.cpp  26_abd_ramp_ground.cpp  27_particle_abd.cpp  28_fem_periodically_pressed_tet.cpp  29_abd_fem_recover.cpp  2_abd_contact_ee.cpp  30_fem_animiator_substep.cpp  31_contact_mask.cpp  32_different_gravity.cpp  33_discrete_shell_bending.cpp  34_particle_rods.cpp  34_static_diff_sim.cpp  CMakeLists.txt  (+9 more)
python/: .gitignore  0_hello_simplicial_complex.py  BUILD.md  README.md  abd_fem_example.py  affine_body_example.py  animated_yarns.py  animator.py  attribute_name.py  engine.py  example.py  fem_link.py  finite_element_example.py  hello.py  hello_simplicial_complex.py  implicit_geometry.py  kirchhoff_rod_bending.py  particle_ground.py  print_uid_collection.py  pyengine.py  pyproject.toml  readme.md  scene.py  setup.py  shell_fem.py  simplicial_complex.py  smart_object.py  string_attribute.py  test_types.py  transform.py  uid_collection.py  uipc_info.py  wrecking_ball.json  wrecking_ball.py
python/pyuipc_gui/: __init__.py
python/pyuipc_loader/: __init__.py
python/src/: .gitignore
python/test/: __init__.py  test_dummy.py  test_pytest.py
python/tests/: test_abd_fem.py  test_affine_body.py  test_animated_yarns.py  test_animator.py  test_app.py  test_attrib.py  test_fem_link.py  test_finite_element.py  test_kirchoff_rod_bending.py  test_particle_ground.py  test_py_engine.py  test_scene.py  test_tetwild.py  test_transform.py  test_typing.py  test_uid.py  test_wrecking_balls.py
python/tutorial/: 0_hello_pyuipc.py  1_hello_pyuipc_gui.py  1_walking_cube.py  2_animated_tet.py  3_animated_yarns.py  4_wrecking_balls.py  5_ramp_sliding.py  6_kirchoff_rod_bending.py  7_walking_cube_moving_board.py  8_static_diff_sim.py  asset.py  pyuipc_tutorial.py
python/typings/: pyuipc.pyi
python/wrapper/: __init__.py  dummy.py
python/yarns/: create.py  yarn_0.txt  yarn_1.txt  yarn_2.txt  yarn_3.txt  yarn_4.txt  yarn_5.txt
src/: CMakeLists.txt  xmake.lua
src/backends/: CMakeLists.txt  xmake.lua
src/constitution/: CMakeLists.txt  affine_body_constitution.cpp  arap.cpp  discrete_shell_bending.cpp  empty.cpp  finite_element_constitution.cpp  finite_element_extra_constitution.cpp  hookean_spring.cpp  kirchhoff_rod_bending.cpp  neo_hookean_shell.cpp  particle.cpp  soft_position_constraint.cpp  soft_transform_constraint.cpp  stable_neo_hookean.cpp
src/core/: CMakeLists.txt  xmake.lua
src/geometry/: CMakeLists.txt  apply_region.cpp  apply_transform.cpp  bvh.cpp  closure.cpp  compute_instance_volume.cpp  compute_vertex_mass.cpp  compute_vertex_volume.cpp  distance.cpp  extract_surface.cpp  factory.cpp  flip_inward_triangles.cpp  intersection.cpp  is_trimesh_closed.cpp  label_connected_vertices.cpp  label_region.cpp  label_surface.cpp  label_triangle_orient.cpp  merge.cpp  mesh_partition.cpp  metis_partition.cpp  octree.cpp  optimal_transform.cpp  tetrahedralize.cpp  tetrahedron_quatrature.h  triangle_quatrature.h  xmake.lua
src/gui/: CMakeLists.txt
src/io/: CMakeLists.txt  attribute_io.cpp  gltf_io.cpp  scene_io.cpp  simplicial_complex_io.cpp  spread_sheet_io.cpp
src/pybind/: CMakeLists.txt  README.md  xmake.lua
src/pyuipc/: CMakeLists.txt  as_numpy.h  module.cpp  pyuipc.cpp  pyuipc.h
src/sanity_check/: 0_none_check.cpp  CMakeLists.txt  context.cpp  context.h  dllexport.cpp  entrance.cpp  entrance.h  half_plane_vertex_distance_check.cpp  init_surface_intersection_check.cpp  sanity_checker.cpp  sanity_checker.h  sanity_checker_auto_register.cpp  sanity_checker_auto_register.h  sanity_checker_collection.cpp  sanity_checker_collection.h  sanity_checker_exception.h  simplicial_surface_distance_check.cpp  simplicial_surface_intersection_check.cpp  simplicial_volume_check.cpp
src/torch/: CMakeLists.txt
src/uipc/: CMakeLists.txt  geometry.h  uipc.h  world.h
src/uipc_gui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/geometry/: CMakeLists.txt  simplicial_complex.cpp
(+1548 files in other folders)
