[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyuipc"
authors = [
    {name = "Zihang Zhu", email = "paradise_craftsman@hotmail.com"},
]
maintainers = [
    {name = "Zihang Zhu",email = "paradise_craftsman@hotmail.com"},
    {name = "Lu Xinyu", email = "lxy819469559@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
version = "0.9.0"
dependencies = [
    "numpy"
]
requires-python = ">=3.10"
description = ""
keywords = ["ipc", "computer graphics", "physics simulation"]

[project.urls]
Homepage = "https://spirimirror.github.io/libuipc-doc/"
Issues = "https://github.com/spiriMirror/libuipc/issues"

[project.optional-dependencies]
gui = ["polyscope"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src", "typings"]

[tool.setuptools.package-data]
"*" = ["*.dll", "*.so", "*.dylib", "*.pyd", "*.pyi"]

[tool.pytest.ini_options]
addopts = ["-s"]
markers = [
    "basic: mark a test as basic",
    "gui: mark a test as requiring GUI",
    "typing: mark a test as requiring type checking",
    "example: mark a test as an example",
]

